beta/api/account-api-service/main/patches/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: therma-account-api-service
spec:
  template:
    spec:
      containers:
        - name: application
          image: mewe/atka-account-api-service:release_a215fe2cec89aa64ed894e4787e3ba1698ea3edf_20230718010044 # {"$imagepolicy": "beta:therma-account-api-service-beta"}
          imagePullPolicy: Always
