beta/api/account-api-service/main/patches/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: therma-account-api-service
spec:
  template:
    spec:
      containers:
      - name: application
        resources:
          limits:
            cpu: 300m
            memory: 500Mi
          requests:
            cpu: 300m
            memory: 500Mi
